force-app/main/default/objects/ServiceAppointment/fields/FSM_CumulativeTravelTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_CumulativeTravelTime__c</fullName>
    <description>Total Travel time (especially) for multi-day jobs.</description>
    <label>Cumulative Travel Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>