force-app/main/default/objects/ServiceAppointment/fields/FSM_CustAgreedTheChange__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustAgreedTheChange__c</fullName>
    <description>When User user attends a customer appointment need to capture the detail whether customer has agreed to this change .Created as a part of SFS-3082.</description>
    <label>Customer Agreed this change?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>