force-app/main/default/objects/ServiceAppointment/fields/FSM_CustApptAdditionalDetails__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustApptAdditionalDetails__c</fullName>
    <description>Capture additional details for customer appointment if customer has not agreed for the change . Created as a part of SFS-3082 .
Label updated as part of SFS-4090</description>
    <label>Additional Customer Appointment Details</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>