force-app/main/default/objects/ServiceAppointment/fields/FSM_CustCoordinatorNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustCoordinatorNumber__c</fullName>
    <description>created as part of SFS-5349</description>
    <label>Customer Coordinator - Contact Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nottingham – 07890948951</fullName>
            </value>
            <value>
                <fullName>Derby  - 07890948949</fullName>
            </value>
            <value>
                <fullName>Leicester - 07890950118</fullName>
            </value>
            <value>
                <fullName>Warwickshire - 07890948950</fullName>
            </value>
            <value>
                <fullName>Central - 07890948948</fullName>
            </value>
            <value>
                <fullName>Worcester &amp; Gloucester - 07890950121</fullName>
            </value>
            <value>
                <fullName>Staffordshire - 07583100439</fullName>
            </value>
            <value>
                <fullName>Shropshire – 07890948953</fullName>
            </value>
            <value>
                <fullName>Customer Leak Support – 03452 660036</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>