force-app/main/default/objects/ServiceAppointment/fields/FSM_CustLocation__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustLocation__c</fullName>
    <description>Created as part of SFS-5346</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>