force-app/main/default/objects/ServiceAppointment/fields/FSM_CustMeterLocation__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustMeterLocation__c</fullName>
    <description>Created as part of SFS-5346</description>
    <label>Meter location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Kitchen sink</fullName>
            </value>
            <value>
                <fullName>In Bathroom</fullName>
            </value>
            <value>
                <fullName>In Garage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>