force-app/main/default/objects/ServiceAppointment/fields/FSM_CustNewMtrReading__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustNewMtrReading__c</fullName>
    <description>Created as part of SFS-5346</description>
    <label>New Meter Reading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>