force-app/main/default/objects/ServiceAppointment/fields/FSM_CustNewMtrSerialNo__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustNewMtrSerialNo__c</fullName>
    <description>Created as part of SFS-5346</description>
    <label>New Meter Serial No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>