force-app/main/default/objects/ServiceAppointment/fields/FSM_CustOldMtrReading__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustOldMtrReading__c</fullName>
    <description>Created as part of SFS-5346</description>
    <label>Old Meter Reading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>