force-app/main/default/objects/ServiceAppointment/fields/FSM_CustOldMtrSerialNo__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustOldMtrSerialNo__c</fullName>
    <description>created as part of  SFS-5346</description>
    <label>Old Meter Serial No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>