force-app/main/default/objects/ServiceAppointment/fields/FSM_CustomerAppointment__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustomerAppointment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-63</description>
    <label>Customer Appointment</label>
    <type>Checkbox</type>
</CustomField>