force-app/main/default/objects/ServiceAppointment/fields/FSM_CustomerAppointmentCapacityCount__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustomerAppointmentCapacityCount__c</fullName>
    <description>SFS-46</description>
    <formula>IF(FSM_CustomerAppointment__c = True,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Appointment Capacity Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>