force-app/main/default/objects/ServiceAppointment/fields/FSM_CustomerAppointmentScore__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustomerAppointmentScore__c</fullName>
    <formula>IF(FSM_CustomerAppointment__c = true, 40,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Appointment Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>