force-app/main/default/objects/ServiceAppointment/fields/FSM_CustomerEmail1__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustomerEmail1__c</fullName>
    <label>Customer Additional Email 1</label>
    <type>Email</type>
</CustomField>