force-app/main/default/objects/ServiceAppointment/fields/FSM_CustomerEmail2__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustomerEmail2__c</fullName>
    <label>Customer Additional Email 2</label>
    <type>Email</type>
</CustomField>