force-app/main/default/objects/ServiceAppointment/fields/FSM_CustomerEmail3__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustomerEmail3__c</fullName>
    <label>Customer Additional Email 3</label>
    <type>Email</type>
</CustomField>