force-app/main/default/objects/ServiceAppointment/fields/FSM_CustomerFeedback__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustomerFeedback__c</fullName>
    <description>This field captures customer feedback as entered by field technician/Virtual users while closing the SA.
Created as a part of SFS-5171..</description>
    <label>Customer Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>