force-app/main/default/objects/ServiceAppointment/fields/FSM_CustomerName__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustomerName__c</fullName>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>