force-app/main/default/objects/ServiceAppointment/fields/FSM_CustomerTelephone__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustomerTelephone__c</fullName>
    <label>Customer Telephone</label>
    <length>11</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>