force-app/main/default/objects/ServiceAppointment/fields/FSM_Debriefcomments__c.field-meta.xml
<CustomField>
    <fullName>FSM_Debriefcomments__c</fullName>
    <description>Created as apart of SFI-696
Updated as a part of SFS-5468</description>
    <label>Debrief Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>