force-app/main/default/objects/ServiceAppointment/fields/FSM_DueDateApplyCounter__c.field-meta.xml
<CustomField>
    <fullName>FSM_DueDateApplyCounter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Created as a part of SFS-3043</description>
    <label>Due Date Apply Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>