force-app/main/default/objects/ServiceAppointment/fields/FSM_DueDateApplyCounterZPM1__c.field-meta.xml
<CustomField>
    <fullName>FSM_DueDateApplyCounterZPM1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>SFS-3028</description>
    <label>Due Date Apply Counter ZPM1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>