force-app/main/default/objects/ServiceAppointment/fields/FSM_DueDateScore__c.field-meta.xml
<CustomField>
    <fullName>FSM_DueDateScore__c</fullName>
    <formula>IF(DueDate &lt; DATETIMEVALUE(TODAY()), 0 , IF ( DueDate &gt; (DATETIMEVALUE(TODAY())+15),0,(15 - (DueDate - DATETIMEVALUE(TODAY())))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>