force-app/main/default/objects/ServiceAppointment/fields/FSM_DurationScore__c.field-meta.xml
<CustomField>
    <fullName>FSM_DurationScore__c</fullName>
    <formula>IF( Duration  &gt;=  180 ,3,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>