force-app/main/default/objects/ServiceAppointment/fields/FSM_DynamicPriority__c.field-meta.xml
<CustomField>
    <fullName>FSM_DynamicPriority__c</fullName>
    <formula>IF (NOT(ISBLANK(TEXT(FSM_PriorityUpdateByScheduler__c))), VALUE(TEXT(FSM_PriorityUpdateByScheduler__c)),
IF ((NOT(ISBLANK( FSSK__FSK_Work_Order__r.FSM_TMAPermit__c)) &amp;&amp; ( TEXT( FSSK__FSK_Work_Order__r.FSM_NoticeState__c)  == &apos;NSEN&apos;)), 1,
(100 - if(FSM_CustomerAppointment__c,FSM_CustomerAppointmentScore__c,FSSK__FSK_Work_Order__r.FSM_NoticeTypeScore__c)
 -  FSSK__FSK_Work_Order__r.FSM_NoticeStatusScore__c -  FSM_DueDateScore__c  -  FSM_DurationScore__c -  FSM_ConstraintStartScore__c - FSM_PriorityScore__c -  FSM_TypeOfLeakScore__c - FSM_BacklogScore__c ) 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dynamic Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>