force-app/main/default/objects/ServiceAppointment/fields/FSM_EarliestSchedulableDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_EarliestSchedulableDate__c</fullName>
    <description>Used in scheduling rules to ensure that a job could never be scheduled before this date if populated
Created as a part of SFS-4792</description>
    <label>Earliest Schedulable Date</label>
    <type>DateTime</type>
</CustomField>