force-app/main/default/objects/ServiceAppointment/fields/FSM_EarliestSchedulableDateCriteria__c.field-meta.xml
<CustomField>
    <fullName>FSM_EarliestSchedulableDateCriteria__c</fullName>
    <description>Used for filtering based on the Earliest Schedulable Date criteria. This checkbox will help identify records that meet specific  requirements.
Created as part of SFS-6665</description>
    <formula>AND(
NOT(ISBLANK(FSM_TMA_Permit__c)),
    NOT(ISBLANK(TEXT(FSSK__FSK_Work_Order__r.FSM_NoticeState__c))),
    TEXT(FSSK__FSK_Work_Order__r.FSM_NoticeState__c) &lt;&gt; &apos;NSEN&apos;,
    OR(
        ISPICKVAL(FSSK__FSK_Work_Order__r.FSM_TMAPermit__r.FSM_NoticeType__c, &apos;02&apos;),
        ISPICKVAL(FSSK__FSK_Work_Order__r.FSM_TMAPermit__r.FSM_NoticeType__c, &apos;03&apos;)
    ),
    FSSK__FSK_Work_Order__r.FSM_CoreTMAJob__c = TRUE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earliest Schedulable Date Criteria</label>
    <type>Checkbox</type>
</CustomField>