force-app/main/default/objects/ServiceAppointment/fields/FSM_EnableAutoReschedule__c.field-meta.xml
<CustomField>
    <fullName>FSM_EnableAutoReschedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFL-1174 Incident to avoid the race conditions</description>
    <label>Enable Auto Reschedule</label>
    <type>Checkbox</type>
</CustomField>