force-app/main/default/objects/ServiceAppointment/fields/FSM_EnrouteEndTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_EnrouteEndTime__c</fullName>
    <description>Created as a part of SFS-1427</description>
    <label>En-route End</label>
    <type>DateTime</type>
</CustomField>