force-app/main/default/objects/ServiceAppointment/fields/FSM_EnrouteStartTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_EnrouteStartTime__c</fullName>
    <description>Created as a part of SFS-1427</description>
    <label>En-route Start</label>
    <type>DateTime</type>
</CustomField>