force-app/main/default/objects/ServiceAppointment/fields/FSM_EstimatedTravelStart__c.field-meta.xml
<CustomField>
    <fullName>FSM_EstimatedTravelStart__c</fullName>
    <description>SFS-2979</description>
    <formula>SchedStartTime - (FSM_ETAinMins__c / 1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Travel Start</label>
    <type>DateTime</type>
</CustomField>