force-app/main/default/objects/ServiceAppointment/fields/FSM_ETAinMins__c.field-meta.xml
<CustomField>
    <fullName>FSM_ETAinMins__c</fullName>
    <description>roll up summary field of AssignedServiceResource</description>
    <label>ETA in mins</label>
    <summarizedField>AssignedResource.EstimatedTravelTime</summarizedField>
    <summaryForeignKey>AssignedResource.ServiceAppointmentId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>