force-app/main/default/objects/ServiceAppointment/fields/FSM_ExcavationOccured__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExcavationOccured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-4068.
This field will remain in the backend and value will be captured when user fills the mandatory fields on TMA Stop screen.</description>
    <label>Excavation Occured or Not</label>
    <type>Checkbox</type>
</CustomField>