force-app/main/default/objects/ServiceAppointment/fields/FSM_ExcludeWorkStepCompletion__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExcludeWorkStepCompletion__c</fullName>
    <formula>$Permission.FSM_ExcludeWorkStepCompletion</formula>
    <label>FSM Exclude Work Step Completion</label>
    <type>Checkbox</type>
</CustomField>