force-app/main/default/objects/ServiceAppointment/fields/FSM_FieldworkerComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_FieldworkerComments__c</fullName>
    <description>Created as a part of SFS-5440</description>
    <label>Fieldworker Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>