force-app/main/default/objects/ServiceAppointment/fields/FSM_FieldworkerVynUrl__c.field-meta.xml
<CustomField>
    <fullName>FSM_FieldworkerVynUrl__c</fullName>
    <description>Created as Part of SFS-5306</description>
    <label>Fieldworker Vyn URL</label>
    <type>Url</type>
</CustomField>