force-app/main/default/objects/ServiceAppointment/fields/FSM_FlocDescription__c.field-meta.xml
<CustomField>
    <fullName>FSM_FlocDescription__c</fullName>
    <formula>FSSK__FSK_Work_Order__r.FSM_FlocDescription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floc Description</label>
    <type>Text</type>
</CustomField>