force-app/main/default/objects/ServiceAppointment/fields/FSM_Flow__c.field-meta.xml
<CustomField>
    <fullName>FSM_Flow__c</fullName>
    <description>created as part of SFS-5352</description>
    <label>Flow (lps)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>