force-app/main/default/objects/ServiceAppointment/fields/FSM_FWRole__c.field-meta.xml
<CustomField>
    <fullName>FSM_FWRole__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R&amp;M/ Reinstatement</fullName>
            </value>
            <value>
                <fullName>Inspector</fullName>
            </value>
            <value>
                <fullName>R&amp;M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>