force-app/main/default/objects/ServiceAppointment/fields/FSM_HasImmediateTMA__c.field-meta.xml
<CustomField>
    <fullName>FSM_HasImmediateTMA__c</fullName>
    <description>Created for SFS-4793.
Updated as part of SFS-6511</description>
    <formula>IF(AND(NOT(ISBLANK( FSSK__FSK_Work_Order__r.FSM_TMAPermit__c )),
OR(ISPICKVAL( FSSK__FSK_Work_Order__r.FSM_TMAPermit__r.FSM_NoticeType__c , &apos;04&apos;) , 
ISPICKVAL(FSSK__FSK_Work_Order__r.FSM_TMAPermit__r.FSM_NoticeType__c, &apos;05&apos;))) 
, true, false)</formula>
    <label>Has Immediate TMA?</label>
    <type>Checkbox</type>
</CustomField>