force-app/main/default/objects/ServiceAppointment/fields/FSM_HoursUntilDueDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_HoursUntilDueDate__c</fullName>
    <formula>(DueDate-NOW())*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Until Due Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>