force-app/main/default/objects/ServiceAppointment/fields/FSM_IconForNonInfra__c.field-meta.xml
<CustomField>
    <fullName>FSM_IconForNonInfra__c</fullName>
    <description>This field is used to show the Icons for Non Infra Field Workers Schedule List screen on mobile

Created by Vijay for POC of SAL-2809
Updated as a part of SFS-5426
updated as part of sfs-7549</description>
    <formula>IF(OR((FSM_BusinessUnit__c = &quot;Water Non Infra&quot;),(FSM_BusinessUnit__c = &quot;Waste Non Infra&quot;), (FSM_BusinessUnit__c = &quot;Bio Resource&quot;)),
IF(FSM_ServiceOrderType__c = &quot;ZPM3&quot;,&quot;❗️&quot;,&quot;&quot;)
&amp;
IF( (FSM_SameStartAppointmentDependencyExists__c = True),&quot;👬&quot; ,&quot;&quot;)
&amp;
IF( FSSK__FSK_Work_Order__r.FSM_MeasuringPointCount__c &gt; 0 ,&quot;📐&quot;,&quot;&quot;),&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icons for Non Infra</label>
    <type>Text</type>
</CustomField>