force-app/main/default/objects/ServiceAppointment/fields/FSM_IconForWasteInfra__c.field-meta.xml
<CustomField>
    <fullName>FSM_IconForWasteInfra__c</fullName>
    <description>This field is used to show the Icons for Waste Infra Field Workers Schedule List screen on mobile</description>
    <formula>IF ( FSM_BusinessUnit__c = &quot;Waste Infra&quot;,
  IF( OR(ISPICKVAL(FSSK__FSK_Work_Order__r.Priority, &quot;1&quot;),ISPICKVAL(FSSK__FSK_Work_Order__r.Priority, &quot;2&quot; )),&quot;🚨&quot;,&quot;&quot;)
  &amp;
IF(  (DateTIMEValue(FSSK__FSK_Work_Order__r.Case.FSM_OpenDate__c + (FSSK__FSK_Work_Order__r.FSM_JobSLAInHours__c / 24)) - NOW())*24*60 &lt;= 30 ,&quot;🚩&quot;,&quot;&quot;)
  &amp;
  IF(  FSSK__FSK_Work_Order__r.Case.FSM_VulnerableCustomer__c  = True ,&quot;🤲&quot;,&quot;&quot;)
  &amp;
  IF(FSM_CheckTMA__c = True,&quot;🚦&quot; ,&quot;&quot;)
  &amp;
  IF(FSM_ServiceOrderType__c = &quot;ZPM3&quot;,&quot;❗️&quot;,&quot;&quot;)
  &amp;
  IF( FSSK__FSK_Work_Order__r.Case.FSM_CustomerAtRiskofDissatisfaction__c = True ,&quot;⚠️&quot; ,&quot;&quot;)
  &amp;
  IF( FSM_CustomerAppointment__c = True ,&quot;🏠&quot;,&quot;&quot;)
  &amp;
  IF( FSSK__FSK_Work_Order__r.FSM_MeasuringPointCount__c &gt; 0 ,&quot;📐&quot;,&quot;&quot;)
  &amp;
  IF( NOT(IsBlank(FSM_ConstraintStart__c)) ,&quot;📆&quot;,&quot;&quot;),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icon for Waste Infra</label>
    <type>Text</type>
</CustomField>