force-app/main/default/objects/ServiceAppointment/fields/FSM_IconForWaterInfra__c.field-meta.xml
<CustomField>
    <fullName>FSM_IconForWaterInfra__c</fullName>
    <description>This field is used to show the Icons for Water Infra &amp; Developer Services Field Workers Schedule List screen on mobile
updated as part of sfs-7549

created by Vijay for POC of SAL-2809
Updated as a part of SFS-5426</description>
    <formula>IF(FSM_BusinessUnit__c  = &quot;Water Infra&quot;,
    IF(AND(
            CONTAINS(ServiceTerritory.Name, &quot;WD4&quot;),
            OR(
                ISPICKVAL(FSSK__FSK_Work_Order__r.Priority, &quot;1&quot;),
                ISPICKVAL(FSSK__FSK_Work_Order__r.Priority, &quot;2&quot;)
            )
        ),
        &quot;🚨&quot;,
        &quot;&quot;
    )
    &amp;
    IF(FSM_ServiceOrderType__c = &quot;ZPM3&quot;,&quot;❗️&quot;,&quot;&quot;)
    &amp;
    IF(FSM_CustomerAppointment__c = True,&quot;🏠&quot; ,&quot;&quot;)
    &amp;
    IF(FSM_CheckTMA__c = True,&quot;🚦&quot; ,&quot;&quot;)
    &amp;
    IF( NOT(IsBlank(FSM_ConstraintStart__c)) ,&quot;📆&quot;,&quot;&quot;) 
    &amp;
    IF( FSSK__FSK_Work_Order__r.Case.FSM_CustomerAtRiskofDissatisfaction__c = True ,&quot;⚠️&quot;,&quot;&quot;)
    &amp;
    IF( FSSK__FSK_Work_Order__r.Case.FSM_VulnerableCustomer__c = True ,&quot;🤲&quot;,&quot;&quot;) 
    &amp;
    IF( FSSK__FSK_Work_Order__r.FSM_MeasuringPointCount__c &gt; 0 ,&quot;📐&quot;,&quot;&quot;)
,&quot;&quot;)
&amp;
IF (FSM_BusinessUnit__c = &quot;Developer Services&quot;,
    IF((DateTIMEValue(FSSK__FSK_Work_Order__r.Case.FSM_OpenDate__c + (FSSK__FSK_Work_Order__r.FSM_JobSLAInHours__c / 24)) - NOW())*24*60 &lt;= 30 ,&quot;🚩&quot;,&quot;&quot;)
    &amp;
    IF(FSM_CheckTMA__c = True,&quot;🚦&quot; ,&quot;&quot;)
,&quot;&quot;)</formula>
    <label>Icon for Water Infra</label>
    <type>Text</type>
</CustomField>