force-app/main/default/objects/ServiceAppointment/fields/FSM_IdentifiedManholeCovers__c.field-meta.xml
<CustomField>
    <fullName>FSM_IdentifiedManholeCovers__c</fullName>
    <description>created as part of SFS-5347</description>
    <label>We have identified that manhole covers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Is a waste water lid that belongs to us</fullName>
            </value>
            <value>
                <fullName>Is a clean water lid that belongs to us. We will inform our clean water team who will be in touch to plan an inspection</fullName>
            </value>
            <value>
                <fullName>Belongs to the local highway authority. To find out who your local highway authority is please visit gov.uk/find-local-council</fullName>
            </value>
            <value>
                <fullName>Belongs to another utility company</fullName>
            </value>
            <value>
                <fullName>Is on private land - please contact a private contractor. You can find one at checkatrade.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>