force-app/main/default/objects/ServiceAppointment/fields/FSM_Impact_Code_API__c.field-meta.xml
<CustomField>
    <fullName>FSM_Impact_Code_API__c</fullName>
    <label>Impact Code API</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AS01</fullName>
            </value>
            <value>
                <fullName>AS02</fullName>
            </value>
            <value>
                <fullName>AS03</fullName>
            </value>
            <value>
                <fullName>AS04</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>BOTH</fullName>
            </value>
            <value>
                <fullName>EMAL</fullName>
            </value>
            <value>
                <fullName>TEL</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>HH00</fullName>
            </value>
            <value>
                <fullName>FF00</fullName>
            </value>
            <value>
                <fullName>COCP</fullName>
            </value>
            <value>
                <fullName>COIN</fullName>
            </value>
            <value>
                <fullName>COIO</fullName>
            </value>
            <value>
                <fullName>COIP</fullName>
            </value>
            <value>
                <fullName>CUCI</fullName>
            </value>
            <value>
                <fullName>DSAT</fullName>
            </value>
            <value>
                <fullName>DSBD</fullName>
            </value>
            <value>
                <fullName>DSBN</fullName>
            </value>
            <value>
                <fullName>DSCL</fullName>
            </value>
            <value>
                <fullName>DSIC</fullName>
            </value>
            <value>
                <fullName>DSIW</fullName>
            </value>
            <value>
                <fullName>DSLE</fullName>
            </value>
            <value>
                <fullName>DSNI</fullName>
            </value>
            <value>
                <fullName>DSNL</fullName>
            </value>
            <value>
                <fullName>DSNR</fullName>
            </value>
            <value>
                <fullName>DSSS</fullName>
            </value>
            <value>
                <fullName>DSTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>