force-app/main/default/objects/ServiceAppointment/fields/FSM_Impact_Code_Value__c.field-meta.xml
<CustomField>
    <fullName>FSM_Impact_Code_Value__c</fullName>
    <label>Impact Code Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equipment Damage</fullName>
            </value>
            <value>
                <fullName>No Impact</fullName>
            </value>
            <value>
                <fullName>Equipment In Hand</fullName>
            </value>
            <value>
                <fullName>Equipment Faulty</fullName>
            </value>
            <value>
                <fullName>Customer is not aware of service request</fullName>
            </value>
            <value>
                <fullName>Customer aware of service request</fullName>
            </value>
            <value>
                <fullName>Consent is not given to contact customer</fullName>
            </value>
            <value>
                <fullName>Consent is given to contact customer</fullName>
            </value>
            <value>
                <fullName>Customer contact NOT reqd for site visit</fullName>
            </value>
            <value>
                <fullName>Customer contact required for site visit</fullName>
            </value>
            <value>
                <fullName>Customer can be contacted via tel/email</fullName>
            </value>
            <value>
                <fullName>Customer preferred contact method email</fullName>
            </value>
            <value>
                <fullName>Customer preferred contact method teleph</fullName>
            </value>
            <value>
                <fullName>Customer contact- first half of the day</fullName>
            </value>
            <value>
                <fullName>Customer contact- any time of the day</fullName>
            </value>
            <value>
                <fullName>Customer contact- second half of the day</fullName>
            </value>
            <value>
                <fullName>COST</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Discharge chamb. not 5m from Conn. Point</fullName>
            </value>
            <value>
                <fullName>Conn. incorrect/Not to Approval Letter</fullName>
            </value>
            <value>
                <fullName>Opening in wrong position on slab</fullName>
            </value>
            <value>
                <fullName>Chamber constructed in the wrong place</fullName>
            </value>
            <value>
                <fullName>Customer connected to wrong sewer</fullName>
            </value>
            <value>
                <fullName>Air testing</fullName>
            </value>
            <value>
                <fullName>Back drop been fitted</fullName>
            </value>
            <value>
                <fullName>Benching not completed</fullName>
            </value>
            <value>
                <fullName>Landing stage in chamber wrong size</fullName>
            </value>
            <value>
                <fullName>Infill cover fitted on demarc. chamber</fullName>
            </value>
            <value>
                <fullName>Ingress of water</fullName>
            </value>
            <value>
                <fullName>Lifting eyes not pointed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>